{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 270,
  "lineage": "f361037f-0083-47c3-c3fa-6dfaa30f3e35",
  "resources": [
    {
      "module": "module.instance_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f6a11788f8e319e",
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:instance/i-09d00aa853ff98af7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d00aa853ff98af7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-054d856173fdf344b",
            "private_dns": "ip-172-16-1-123.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e031986495751f5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01575e1a079eb26dc",
            "tags": {
              "Name": "aws_ubt01"
            },
            "tags_all": {
              "Name": "aws_ubt01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044896465598fbd6b"
            ]
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029d23089b395ca06",
            "associate_with_private_ip": "172.16.1.123",
            "association_id": "eipassoc-0362b4e3ff6651932",
            "domain": "vpc",
            "id": "eipalloc-029d23089b395ca06",
            "instance": "i-09d00aa853ff98af7",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-054d856173fdf344b",
            "private_dns": "ip-172-16-1-123.ap-southeast-1.compute.internal",
            "private_ip": "172.16.1.123",
            "public_dns": "ec2-13-250-87-167.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.87.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.instance_module.aws_instance.instance01",
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:internet-gateway/igw-001ef036c753df4a5",
            "id": "igw-001ef036c753df4a5",
            "owner_id": "655612526828",
            "tags": {
              "Name": "aws-gw01"
            },
            "tags_all": {
              "Name": "aws-gw01"
            },
            "vpc_id": "vpc-0aa8696876e1c8cf1"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtable01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:route-table/rtb-0698d7f8e2e41d7b1",
            "id": "rtb-0698d7f8e2e41d7b1",
            "owner_id": "655612526828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001ef036c753df4a5",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001ef036c753df4a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_rtable01"
            },
            "tags_all": {
              "Name": "aws_rtable01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa8696876e1c8cf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0088082bc5bd81b18",
            "route_table_id": "rtb-0698d7f8e2e41d7b1",
            "subnet_id": "subnet-01575e1a079eb26dc"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_route_table.rtable01",
            "module.networking_module.aws_subnet.subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:security-group/sg-044896465598fbd6b",
            "description": "Allow web-traffice inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044896465598fbd6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from world",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from world",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from world",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              }
            ],
            "name": "allow_web-traffic",
            "name_prefix": "",
            "owner_id": "655612526828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web-traffic"
            },
            "tags_all": {
              "Name": "allow_web-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa8696876e1c8cf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:subnet/subnet-01575e1a079eb26dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01575e1a079eb26dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655612526828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet01"
            },
            "tags_all": {
              "Name": "aws_subnet01"
            },
            "vpc_id": "vpc-0aa8696876e1c8cf1"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:vpc/vpc-0aa8696876e1c8cf1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0da162721123b71a4",
            "default_route_table_id": "rtb-0b98a345ae705f801",
            "default_security_group_id": "sg-0f4a8b7772806d57e",
            "dhcp_options_id": "dopt-06a2a22973a05d284",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa8696876e1c8cf1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b98a345ae705f801",
            "owner_id": "655612526828",
            "tags": {
              "Name": "aws_vpc01"
            },
            "tags_all": {
              "Name": "aws_vpc01"
            }
          }
        }
      ]
    }
  ]
}